Bug 244288 - Cannot Modify Key Properties
Summary: Cannot Modify Key Properties
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-12 12:45 UTC by Stan G. Kain
Modified: 2010-08-07 20:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stan G. Kain 2010-07-12 12:45:40 UTC
Version:           unspecified (using Devel) 
OS:                Linux

In the previous version of KGPG, I was unable to import keys from a folder in Dolphin.  I can now import the keys with the new version 2.3.91.  However, when I click on "Key Properties" for an imported key and attempt to change "Owner Trust" from "Unknown" to anything else, the change does not occur.  What does occur is that I begin seeing very high CPU usage and nothing else.  Trying to change "Owner Trust" in any key gives the same result.

Reproducible: Always

Steps to Reproduce:
I have rebooted the system to stop the high CPU usage and retried changing "Owner Trust," but have the same result time after time.

Actual Results:  
Open KGPG and click on an imported key.  Attempt to change "Owner Trust" and the trust level does not change, but high CPU usage begins.

Expected Results:  
The "Owner Trust" level should have been changed and no change should have occurred in CPU usage.

OS: Linux (x86_64) release 2.6.35-7-generic
Compiler: cc
Comment 1 Rolf Eike Beer 2010-07-13 07:29:14 UTC
> Open KGPG and click on an imported key.  Attempt to change "Owner Trust"
> and the trust level does not change, but high CPU usage begins.

Have you tried this with a key not freshly imported? Depending on the size of 
your keyring this also simply might take a while.

You likely don't need to reboot, this is surely just a gpg process doing work. 
"killall gpg" would stop this.
Comment 2 Stan G. Kain 2010-07-13 09:20:46 UTC
I do not have any keys which are not freshly imported to try.  I did a 
fresh install of Kubuntu 10.10 Alpha 2, then moved all my backup files 
into Home, in the same manner I have always done previously, including 
the folder with my encryption keys.  I only have 4 keys on my keyring, 
so I am quite sure the size of the keyring isn't a problem.

I had filed a bug with the previous version of KGPG, in which I was 
unable to import any keys.   I merely get an error message stating that 
the key cannot be imported.  That was with version 2.3.60.  Apparently, 
that bug was resolved, but the update and fix are not yet available for 
Kubuntu 10.04, so I still cannot import keys there.  I just get the 
error message that keys cannot be imported.

Now, with Kubuntu 10.10 Alpha 2, with the latest updates, I have KGPG 
version 2.3.91.  With this version of KGPG, I can again import the keys, 
but I cannot change the "Owner Trust" level of the keys after importing 
them.  They import properly, as they always have, but I cannot change 
the "Owner Trust Level," but instead just get high CPU usage.  With my 
dual core processor, one core is showing about 80% usage while the other 
core will show 60% or more.

Yes, "killall gpg" also worked to kill the process, but I tried 
rebooting the system, as well.  It appears that the upgrade from version 
2.3.60 to 2.3.91 did fix the problem with importing the keys, but 
created a new problem in that the Owner Trust cannot be changed.

Regards,
Stan

On 07/13/2010 12:29 AM, Rolf Eike Beer wrote:
> https://bugs.kde.org/show_bug.cgi?id=244288
>
>
>
>
>
> --- Comment #1 from Rolf Eike Beer<kde opensource sf-tec de>   2010-07-13 07:29:14 ---
>    
>> Open KGPG and click on an imported key.  Attempt to change "Owner Trust"
>> and the trust level does not change, but high CPU usage begins.
>>      
> Have you tried this with a key not freshly imported? Depending on the size of
> your keyring this also simply might take a while.
>
> You likely don't need to reboot, this is surely just a gpg process doing work.
> "killall gpg" would stop this.
>
>
Comment 3 Rolf Eike Beer 2010-07-13 11:03:45 UTC
> I had filed a bug with the previous version of KGPG, in which I was
> unable to import any keys.   I merely get an error message stating that
> the key cannot be imported.  That was with version 2.3.60.  Apparently,
> that bug was resolved, but the update and fix are not yet available for
> Kubuntu 10.04, so I still cannot import keys there.  I just get the
> error message that keys cannot be imported.

gpg --import file1 file2 file3

> Yes, "killall gpg" also worked to kill the process, but I tried
> rebooting the system, as well.  It appears that the upgrade from version
> 2.3.60 to 2.3.91 did fix the problem with importing the keys, but
> created a new problem in that the Owner Trust cannot be changed.

Or just showed a problem that has always been there. I tried this morning
with an older key from my keyring and I could change the owner trust there
without problems.

Can you please quit your KGpg and start it again from a terminal to look
if there is any output of what goes wrong if you change the owner trust?
Comment 4 Stan G. Kain 2010-07-13 11:33:30 UTC
All the keys I have are older keys....I've probably had them for three 
years or more.  I just put them back in Home after the fresh install.  
This is a procedure I've used for three or four years, many times, with 
many different distros.  This is the first time, with Kubuntu 10.00 that 
I've experienced issues with this.

Incidentally, the previous bug I filed, just for reference, is 243500.  
That seems to have been fixed in this latest version.

Here is the output from the terminal when I attempted to change the 
Owner Trust:



Regards,
Stan

On 07/13/2010 04:03 AM, Rolf Eike Beer wrote:
> https://bugs.kde.org/show_bug.cgi?id=244288
>
>
>
>
>
> --- Comment #3 from Rolf Eike Beer<kde opensource sf-tec de>   2010-07-13 11:03:45 ---
>    
>> I had filed a bug with the previous version of KGPG, in which I was
>> unable to import any keys.   I merely get an error message stating that
>> the key cannot be imported.  That was with version 2.3.60.  Apparently,
>> that bug was resolved, but the update and fix are not yet available for
>> Kubuntu 10.04, so I still cannot import keys there.  I just get the
>> error message that keys cannot be imported.
>>      
> gpg --import file1 file2 file3
>
>    
>> Yes, "killall gpg" also worked to kill the process, but I tried
>> rebooting the system, as well.  It appears that the upgrade from version
>> 2.3.60 to 2.3.91 did fix the problem with importing the keys, but
>> created a new problem in that the Owner Trust cannot be changed.
>>      
> Or just showed a problem that has always been there. I tried this morning
> with an older key from my keyring and I could change the owner trust there
> without problems.
>
> Can you please quit your KGpg and start it again from a terminal to look
> if there is any output of what goes wrong if you change the owner trust?
>
>
Comment 5 Rolf Eike Beer 2010-07-13 16:40:37 UTC
> All the keys I have are older keys....I've probably had them for three
> years or more.  I just put them back in Home after the fresh install.
> This is a procedure I've used for three or four years, many times, with
> many different distros.  This is the first time, with Kubuntu 10.00 that
> I've experienced issues with this.

So are they freshly imported or not? In comment #2 you say they are, now
you say they are not.

> Incidentally, the previous bug I filed, just for reference, is 243500.
> That seems to have been fixed in this latest version.

Yes, I remember, it was me and it was less than a week ago ;)

> Here is the output from the terminal when I attempted to change the
> Owner Trust:

There is no output.

Please strip everything you do not comment on from the previous mail when
replying as this ends up in bugs.kde.org and just makes the entry
unreadable.
Comment 6 Stan G. Kain 2010-07-13 17:04:22 UTC
Will do.  Sorry about that.  Anyway, I'm guessing the terminal output I 
sent did not appear.  I am attaching it as a .jpg to this email.  I 
don't have email set up in the test box, so cannot copy directly from 
the terminal and send.  I had to scan and save as .jpg and have attached 
it here.

About all I can say is that KGPG worked just fine in Kubuntu 10.04 until 
I installed the KDE SC 4.5 RC updates.  It has not worked correctly for 
me at all in Kubuntu 10.10.

Regards,
Stan
>> Here is the output from the terminal when I attempted to change the
>> Owner Trust:
>>      
> There is no output.
>
> Please strip everything you do not comment on from the previous mail when
> replying as this ends up in bugs.kde.org and just makes the entry
> unreadable.
>
>
Comment 7 Rolf Eike Beer 2010-07-13 17:30:28 UTC
> I am attaching it as a .jpg to this email.  I
> don't have email set up in the test box, so cannot copy directly from
> the terminal and send.  I had to scan and save as .jpg and have attached
> it here.

ssh to a box with email support and paste it in a file there or something.

Attachments when answering by email to a bug will not work.
Comment 8 Stan G. Kain 2010-07-13 17:37:27 UTC
Let me try this:

zenarcher@stantest:~kgpg
QMetaObject::invokeMethod: No such method
KGpgApp::loadCommandLineOptionsForNewInstance()
registerWindow Invalid WindowMenu.Registrar!
zenarcher@stantest:!$ QInotifyFileSystemWatcherEngine::addPaths: 
inotify_add_watch failed: No such file or directory
QFileSystemWatcher: failed to add paths: /home/zenarcher/.config/ibus/bus
Bus::open: Can not get ibus-daemon's address.
IBusInputContest::createInputContext: no connection to ibus-daemon

Regards,
Stan
> ssh to a box with email support and paste it in a file there or something.
>
> Attachments when answering by email to a bug will not work.
>
>
Comment 9 Rolf Eike Beer 2010-07-13 19:06:17 UTC
Ok, thanks. That doesn't show anything useful. I'll try to reproduce this.
Comment 10 Stan G. Kain 2010-07-28 20:44:07 UTC
I have tried other functions, such as setting the Default Key and I am able to do that as always.  This still only seems to be an issue with changing the Trust Level, as best as I can see.
Comment 11 Stan G. Kain 2010-08-05 22:05:06 UTC
I have done a fresh install of Kubuntu 10.10 Alpha 3 (64 bit) on two machines. On both machines, I am still having the same issue.

Procedure:
1) Install KGPG from repository.
2) Start KGPG from Main Menu.
3) Import my keys from a file folder in Home using Dolphin.
4) From Key Properties, attempt to change Trust Level of any key from "I Do Not Know" to any other Trust Level.  The Trust Level does not change.  Click "OK" or "Apply."
5) Immediately, when checking "System Monitor," KGPG shows it is using 47% of the CPU (Dual Core AMD, 4GM RAM).
6) Stops when process is killed through System Monitor.

Prior to Kubuntu 10.10, the same procedure worked perfectly and I could change the Trust Level on each key.
Comment 12 Rolf Eike Beer 2010-08-07 19:14:18 UTC
SVN commit 1160293 by dakon:

If a transaction fails to quit it's conversation with GnuPG kill the GnuPG process instead of endlessly retrying.

CCBUG:244288

 M  +30 -3     kgpgtransaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160293
Comment 13 Rolf Eike Beer 2010-08-07 19:31:55 UTC
Ok, I found the cause of this problem. GnuPG does an additional question if you set the trust to ultimate that the transaction class of KGpg did not expect. As a workaround set the trust to "full" instead of "ultimate".
Comment 14 Rolf Eike Beer 2010-08-07 19:40:33 UTC
SVN commit 1160301 by dakon:

fix setting owner trust to ultimate

CCBUG:244288

 M  +11 -3     kgpgchangetrust.cpp  
 M  +1 -0      kgpgchangetrust.h  
 M  +1 -0      kgpgtransaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160301
Comment 15 Rolf Eike Beer 2010-08-07 19:42:40 UTC
SVN commit 1160302 by dakon:

fix setting owner trust to ultimate

BUG:244288
FIXEDIN:4.5.1

forward-port of r1160301


 M  +11 -3     kgpgchangetrust.cpp  
 M  +1 -0      kgpgchangetrust.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160302
Comment 16 Stan G. Kain 2010-08-07 20:46:33 UTC
Thank you very much for all your time and effort!

On 08/07/2010 12:42 PM, Rolf Eike Beer wrote:
> https://bugs.kde.org/show_bug.cgi?id=244288
>
>
> Rolf Eike Beer <kde@opensource.sf-tec.de> changed:
>
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|ASSIGNED                    |RESOLVED
>    Version Fixed In|                            |4.5.1
>          Resolution|                            |FIXED
>
>
>
>
> --- Comment #15 from Rolf Eike Beer <kde opensource sf-tec de>  2010-08-07 19:42:40 ---
> SVN commit 1160302 by dakon:
>
> fix setting owner trust to ultimate
>
> BUG:244288
> FIXEDIN:4.5.1
>
> forward-port of r1160301
>
>
>  M  +11 -3     kgpgchangetrust.cpp  
>  M  +1 -0      kgpgchangetrust.h  
>
>
> WebSVN link: http://websvn.kde.org/?view=rev&revision=1160302
>
>