fix setting owner trust to ultimate

BUG:244288
FIXEDIN:4.5.1

forward-port of r1160301

svn path=/branches/KDE/4.5/kdeutils/kgpg/; revision=1160302