transactions/kgpgchangetrust.h
@@ -34,6 +34,7 @@ public:
 
 protected:
 	virtual bool nextLine(const QString &line);
+	virtual ts_boolanswer boolQuestion(const QString &line);
 	virtual bool preStart();
 
 private:
